# plasti_sim

./: .gitignore  README.md
particle_sim/: ACTION_README.md  CMakeLists.txt  README.md  SERVICE_README.md  package.xml  sample_particles.csv  sydney_regatta.csv
particle_sim/action/: SampleParticles.action
particle_sim/config/: particle_sim.rviz
particle_sim/launch/: particle_sim.launch.py  sensor_test.launch.py
particle_sim/msg/: DetectedParticle.msg
particle_sim/scripts/: microparticle_sensor_node.py  particle_sampling_action_server.py  particle_sim_node.py
particle_sim/srv/: SampleParticles.srv
plastiSim/: CAN_FIXES_REPORT.md  CMakeLists.txt  README_new.md  package.xml  remove_plugins.py
plastiSim/launch/: spawn_debris.launch.py
plastiSim/models/can_coke/: model.config  model.sdf
plastiSim/models/diff_drive_robot/: model.config  model.sdf
plastiSim/models/floating_object/: model.config  model.sdf
plastiSim/models/marker_sphere/: model.config  model.sdf
plastiSim/models/microplastic_sphere/: model.config  model.sdf
plastiSim/models/plastic_bottle/: model.config  model.sdf  pet_bottle.dae  plastic_bottle.dae  untitled.blend  untitled.blend1
plastiSim/models/plastic_container/: model.config  model.sdf  plastic_container.dae
plastiSim/models/plastic_container/materials/scripts/: plastic_container.material
plastiSim/models/red_marker/: model.config
plastiSim/models/tuna_can/: model.config  model.sdf  tuna_can.dae
plastiSim/models/tuna_can/materials/scripts/: tuna_can.material
plastiSim/plugins/float_sink/: CMakeLists.txt  FloatSinkPlugin.cc
plastiSim/plugins/ocean_current_wave/: CMakeLists.txt  OceanCurrentWavePlugin.cc
plastiSim/plugins/sphere_plastics/: CMakeLists.txt  MicroplasticPlugin.cc
plastiSim/plugins/surface_motion/: .gitignore  CMakeLists.txt  SurfaceMotionPlugin.cc
plastiSim/plugins/surface_tension/: CMakeLists.txt  SurfaceTensionPlugin.cc
plastiSim/plugins/usv_buoyancy/: CMakeLists.txt  robot_buoyancy_wave.cpp
plastiSim/plugins/usv_thrust/: CMakeLists.txt  thrust_plugin.cpp
plastiSim/scripts/: debris_trajectory.py  generate_particles.py  particle_sim.py  spawn_model.py
plastiSim/src/: debris_spawner.cpp
plastiSim/usv_model/: empty_component_config.xacro  example_component_config.xacro  example_component_config.yaml  example_thruster_config.yaml  sample_particles.csv  wamv_target.urdf
usv_control/: CMakeLists.txt  EASY_VISUALIZATION.md  README.md  package.xml
usv_control/launch/: usv_bringup.launch.py  usv_bringup_with_tf.launch.py  usv_velocity_controller.launch.py
usv_control/scripts/: gz_dynamic_pose_listener.py
usv_control/src/: usv_path_tracker.cpp  usv_teleop_keyboard.cpp  usv_velocity_controller.cpp
usv_planners/: CMakeLists.txt  README.md  package.xml
usv_planners/include/simple_dwa_planner/: simple_dwa.hpp
usv_planners/launch/: dwa_planner.launch.py
usv_planners/scripts/: send_goal.py
usv_planners/src/: simple_dwa_planner.cpp
