<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plastiSim</name>
  <version>1.0.0</version>
  <description>Plastic debris models with physics plugins for VRX marine simulation environments</description>
  
  <maintainer email="navid@example.com">Navid</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>gz-cmake3</depend>
  <depend>gz-transport13</depend>
  <depend>gz-msgs10</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
