cmake_minimum_required(VERSION 3.0)
project(SurfaceTensionPlugin)
find_package(gazebo REQUIRED)
include_directories(${GAZEBO_INCLUDE_DIRS})
link_directories(${GAZEBO_LIBRARY_DIRS})
add_library(SurfaceTensionPlugin SHARED SurfaceTensionPlugin.cc)
target_link_libraries(SurfaceTensionPlugin ${GAZEBO_LIBRARIES})